update flags