@@ -42,11 +42,9 @@ riffRaffArtifactResources += (file("cloudformation/memsub-promotions-cf.yaml"), 
 
 javaOptions in Universal ++= Seq(
   "-Dpidfile.path=/dev/null",
-  "-J-XX:MaxRAMFraction=2",
-  "-J-XX:InitialRAMFraction=2",
   "-J-XX:MaxMetaspaceSize=500m",
   "-J-XX:+PrintGCDetails",
-  s"-J-Xloggc:/var/log/${packageName.value}/gc.log"
+  s"-J-Xlog:gc:/var/log/${packageName.value}/gc.log"
 )
 
 scalaVersion := "2.13.7"
